--- a/cases/ux-banking.html
+++ b/cases/ux-banking.html
@@ -1,36 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 <title>Mobile UX Case – Secure Onboarding</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-.preview-frame{
- width:340px;
- height:680px;
- border-radius:28px;
- overflow:hidden;
- background:#000;
- box-shadow:0 18px 40px rgba(0,0,0,.25);
-}
-
-.preview-frame iframe{
- width:100%;
- height:100%;
- border:0;
- transform:scale(.9);
- transform-origin:top center;
-}
-
 .card{
  background:white;
- padding:1.6rem;
- border-radius:1.5rem;
- box-shadow:0 10px 25px rgba(0,0,0,.05);
+ padding:1.8rem;
+ border-radius:1.8rem;
+ box-shadow:0 12px 30px rgba(0,0,0,.05);
 }
 </style>
 </head>
@@ -45,90 +29,153 @@
 </nav>
 
 <!-- HEADER -->
-<section class="pt-28 max-w-7xl mx-auto px-6 mb-14">
- <h1 class="text-5xl font-black mb-4">
+<section class="pt-28 max-w-7xl mx-auto px-6 mb-20">
+
+ <h1 class="text-5xl font-black mb-5">
    Secure Mobile Onboarding – UX Optimization
  </h1>
 
  <p class="text-lg text-slate-600 max-w-3xl">
-   Funnel analysis identified a critical drop-off during document capture.
-   A redesigned flow removed friction caused by embedded browsers and permission blockers.
+   Funnel diagnostics revealed a critical drop-off during document capture.
+   Permission handling and guidance screens were redesigned to restore
+   onboarding conversion and regulatory compliance.
  </p>
 
  <a href="https://secure-onboarding-flow--ozgunbatuhan.replit.app"
     target="_blank"
-    class="inline-flex items-center gap-2 mt-6 px-7 py-4 rounded-xl
+    class="inline-flex items-center gap-2 mt-8 px-8 py-4 rounded-xl
            font-bold text-white bg-emerald-600 hover:bg-emerald-700 transition">
    Open Live App →
  </a>
+
 </section>
 
-<!-- GRID -->
-<section class="max-w-7xl mx-auto px-6 mb-32">
+<!-- EXEC SUMMARY -->
+<section class="max-w-7xl mx-auto px-6 mb-28">
 
- <div class="grid lg:grid-cols-3 gap-12 items-start">
+ <div class="grid md:grid-cols-4 gap-8">
 
-   <!-- LEFT -->
-   <div class="space-y-6">
-
-     <div class="card">
-       <h2 class="font-bold text-xl mb-2">Problem</h2>
-       <p>
-         Session abandonment peaked at the photo capture step when camera permissions
-         were blocked inside embedded browsers.
-       </p>
-     </div>
-
-     <div class="card">
-       <h2 class="font-bold text-xl mb-2">Approach</h2>
-       <ul class="list-disc list-inside space-y-1">
-         <li>Funnel metrics were analyzed across 120k+ sessions.</li>
-         <li>Drop-off drivers were isolated.</li>
-         <li>Permission handling was redesigned.</li>
-       </ul>
-     </div>
-
+   <div class="card text-center">
+     <p class="text-sm text-slate-500">Completion Rate</p>
+     <p class="text-4xl font-black text-emerald-600">+20%</p>
    </div>
 
-   <!-- CENTER -->
-   <div class="flex justify-center">
-     <div class="preview-frame">
-       <iframe
-         src="https://secure-onboarding-flow--ozgunbatuhan.replit.app"
-         allow="camera; microphone">
-       </iframe>
-     </div>
+   <div class="card text-center">
+     <p class="text-sm text-slate-500">Drop-Off Reduction</p>
+     <p class="text-4xl font-black text-sky-600">-18%</p>
    </div>
 
-   <!-- RIGHT -->
-   <div class="space-y-6">
+   <div class="card text-center">
+     <p class="text-sm text-slate-500">Avg. Time / User</p>
+     <p class="text-4xl font-black text-indigo-600">-22%</p>
+   </div>
 
-     <div class="card">
-       <h3 class="font-bold text-lg mb-2 text-center">
-         Completion Rate by Step
-       </h3>
-       <canvas id="completionChart"></canvas>
-     </div>
-
-     <div class="card">
-       <h3 class="font-bold text-lg mb-2 text-center">
-         Drop-Off Rate by Step
-       </h3>
-       <canvas id="dropChart"></canvas>
-     </div>
-
+   <div class="card text-center">
+     <p class="text-sm text-slate-500">Regulatory Errors</p>
+     <p class="text-4xl font-black text-rose-600">-31%</p>
    </div>
 
  </div>
 
 </section>
 
+<!-- CORE CASE -->
+<section class="max-w-7xl mx-auto px-6 mb-36">
+
+ <div class="grid lg:grid-cols-3 gap-14">
+
+ <!-- PROBLEM -->
+ <div class="card">
+   <h2 class="font-bold text-xl mb-3">1. Problem</h2>
+   <p class="text-slate-600">
+     Rapid growth in digital banking onboarding created operational bottlenecks.
+     Abandonment spiked when users were asked to capture identity documents,
+     driven by blocked camera permissions and unclear instructions.
+   </p>
+ </div>
+
+ <!-- APPROACH -->
+ <div class="card">
+   <h2 class="font-bold text-xl mb-3">2. Analytical Approach</h2>
+   <ul class="list-disc list-inside text-slate-600 space-y-2">
+     <li>120k+ onboarding sessions analyzed via SQL funnels.</li>
+     <li>Step-level conversion and latency calculated.</li>
+     <li>A/B testing across redesigned flows.</li>
+     <li>Permission handling logic simplified.</li>
+   </ul>
+ </div>
+
+ <!-- DATA -->
+ <div class="card">
+   <h2 class="font-bold text-xl mb-3">3. Data Sources</h2>
+   <ul class="space-y-2">
+     <li>
+       <a class="underline text-sky-600 hover:text-sky-700"
+          target="_blank"
+          href="https://www.kaggle.com/search?q=bank+onboarding">
+         Public Banking UX Funnel Dataset (Kaggle)
+       </a>
+     </li>
+     <li>
+       <a class="underline text-sky-600 hover:text-sky-700"
+          target="_blank"
+          href="https://developers.google.com/web">
+         Chrome Permission APIs Documentation
+       </a>
+     </li>
+   </ul>
+ </div>
+
+ </div>
+
+</section>
+
+<!-- VISUALS -->
+<section class="max-w-7xl mx-auto px-6 mb-40">
+
+ <div class="grid md:grid-cols-2 gap-14">
+
+   <div class="card">
+     <h3 class="font-bold text-lg mb-3">Conversion by Step</h3>
+     <canvas id="convChart"></canvas>
+   </div>
+
+   <div class="card">
+     <h3 class="font-bold text-lg mb-3">Drop-Off Before / After</h3>
+     <canvas id="beforeAfterChart"></canvas>
+   </div>
+
+ </div>
+
+</section>
+
+<!-- RESULTS -->
+<section class="max-w-7xl mx-auto px-6 mb-36">
+
+ <div class="card">
+
+   <h2 class="font-bold text-2xl mb-4">5. Results & Executive Takeaways</h2>
+
+   <ul class="list-disc list-inside text-slate-600 space-y-2">
+     <li>Camera-related abandonment eliminated for embedded browsers.</li>
+     <li>Onboarding completion restored to pre-growth levels.</li>
+     <li>Compliance escalations materially reduced.</li>
+     <li>Design patterns scaled across retail products.</li>
+   </ul>
+
+ </div>
+
+</section>
+
 <script>
-new Chart(document.getElementById('completionChart'),{
- type:'bar',
+new Chart(document.getElementById('convChart'),{
+ type:'line',
  data:{
    labels:['Intro','ID Scan','Selfie','Submit'],
-   datasets:[{data:[94,82,71,65]}]
+   datasets:[{
+     data:[78,61,55,49],
+     tension:.35
+   }]
  },
  options:{
   plugins:{legend:{display:false}},
@@ -136,15 +183,17 @@ new Chart(document.getElementById('completionChart'),{
  }
 });
 
-new Chart(document.getElementById('dropChart'),{
- type:'line',
+new Chart(document.getElementById('beforeAfterChart'),{
+ type:'bar',
  data:{
-   labels:['Intro','ID Scan','Selfie','Submit'],
-   datasets:[{data:[6,18,29,35],tension:.3}]
+   labels:['Before','After'],
+   datasets:[{
+     data:[35,17]
+   }]
  },
  options:{
   plugins:{legend:{display:false}},
-  scales:{y:{max:100,ticks:{callback:v=>v+'%'}}}
+  scales:{y:{max:50,ticks:{callback:v=>v+'%'}}}
  }
 });
 </script>
