--- a/cases/ux-banking.html
+++ b/cases/ux-banking.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -8,174 +8,159 @@
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-<style>
-.card{
- background:white;
- padding:1.8rem;
- border-radius:1.8rem;
- box-shadow:0 12px 30px rgba(0,0,0,.05);
-}
-</style>
 </head>
 
 <body class="bg-slate-50 text-slate-900">
 
 <!-- NAV -->
-<nav class="fixed top-0 w-full bg-white border-b z-50">
- <div class="max-w-7xl mx-auto p-4">
-   <a href="index.html" class="font-black text-xl">Batuhan Dogan</a>
- </div>
+<nav class="fixed w-full bg-white/90 backdrop-blur border-b z-50">
+  <div class="max-w-7xl mx-auto flex justify-between items-center p-4">
+    <a href="index.html" class="font-black text-xl">Batuhan Dogan</a>
+  </div>
 </nav>
 
-<!-- HEADER -->
-<section class="pt-28 max-w-7xl mx-auto px-6 mb-20">
+<!-- HERO -->
+<header class="pt-40 max-w-7xl mx-auto px-6 mb-40">
 
- <h1 class="text-5xl font-black mb-5">
-   Secure Mobile Onboarding – UX Optimization
- </h1>
+  <h1 class="text-6xl font-black mb-6 leading-tight">
+    Secure Mobile Onboarding – UX Optimization
+  </h1>
 
- <p class="text-lg text-slate-600 max-w-3xl">
-   Funnel diagnostics revealed a critical drop-off during document capture.
-   Permission handling and guidance screens were redesigned to restore
-   onboarding conversion and regulatory compliance.
- </p>
+  <p class="text-xl text-slate-600 max-w-3xl">
+    Funnel diagnostics identified a major conversion drop during identity photo capture.
+    Permission handling and guidance screens were redesigned to stabilize onboarding performance.
+  </p>
 
- <a href="https://secure-onboarding-flow--ozgunbatuhan.replit.app"
-    target="_blank"
-    class="inline-flex items-center gap-2 mt-8 px-8 py-4 rounded-xl
-           font-bold text-white bg-emerald-600 hover:bg-emerald-700 transition">
-   Open Live App →
- </a>
+  <div class="mt-10">
+    <a href="https://secure-onboarding-flow--ozgunbatuhan.replit.app"
+       target="_blank"
+       class="bg-emerald-600 text-white px-8 py-4 rounded-full font-bold hover:bg-emerald-700 transition">
+       Open Live App
+    </a>
+  </div>
 
-</section>
+</header>
 
-<!-- EXEC SUMMARY -->
-<section class="max-w-7xl mx-auto px-6 mb-28">
-
- <div class="grid md:grid-cols-4 gap-8">
-
-   <div class="card text-center">
-     <p class="text-sm text-slate-500">Completion Rate</p>
-     <p class="text-4xl font-black text-emerald-600">+20%</p>
-   </div>
-
-   <div class="card text-center">
-     <p class="text-sm text-slate-500">Drop-Off Reduction</p>
-     <p class="text-4xl font-black text-sky-600">-18%</p>
-   </div>
-
-   <div class="card text-center">
-     <p class="text-sm text-slate-500">Avg. Time / User</p>
-     <p class="text-4xl font-black text-indigo-600">-22%</p>
-   </div>
-
-   <div class="card text-center">
-     <p class="text-sm text-slate-500">Regulatory Errors</p>
-     <p class="text-4xl font-black text-rose-600">-31%</p>
-   </div>
-
- </div>
-
-</section>
-
-<!-- CORE CASE -->
-<section class="max-w-7xl mx-auto px-6 mb-36">
-
- <div class="grid lg:grid-cols-3 gap-14">
-
- <!-- PROBLEM -->
- <div class="card">
-   <h2 class="font-bold text-xl mb-3">1. Problem</h2>
-   <p class="text-slate-600">
-     Rapid growth in digital banking onboarding created operational bottlenecks.
-     Abandonment spiked when users were asked to capture identity documents,
-     driven by blocked camera permissions and unclear instructions.
-   </p>
- </div>
-
- <!-- APPROACH -->
- <div class="card">
-   <h2 class="font-bold text-xl mb-3">2. Analytical Approach</h2>
-   <ul class="list-disc list-inside text-slate-600 space-y-2">
-     <li>120k+ onboarding sessions analyzed via SQL funnels.</li>
-     <li>Step-level conversion and latency calculated.</li>
-     <li>A/B testing across redesigned flows.</li>
-     <li>Permission handling logic simplified.</li>
-   </ul>
- </div>
-
- <!-- DATA -->
- <div class="card">
-   <h2 class="font-bold text-xl mb-3">3. Data Sources</h2>
-   <ul class="space-y-2">
-     <li>
-       <a class="underline text-sky-600 hover:text-sky-700"
-          target="_blank"
-          href="https://www.kaggle.com/search?q=bank+onboarding">
-         Public Banking UX Funnel Dataset (Kaggle)
-       </a>
-     </li>
-     <li>
-       <a class="underline text-sky-600 hover:text-sky-700"
-          target="_blank"
-          href="https://developers.google.com/web">
-         Chrome Permission APIs Documentation
-       </a>
-     </li>
-   </ul>
- </div>
-
- </div>
-
-</section>
-
-<!-- VISUALS -->
+<!-- KPI -->
 <section class="max-w-7xl mx-auto px-6 mb-40">
 
- <div class="grid md:grid-cols-2 gap-14">
+  <div class="grid md:grid-cols-4 gap-8">
 
-   <div class="card">
-     <h3 class="font-bold text-lg mb-3">Conversion by Step</h3>
-     <canvas id="convChart"></canvas>
-   </div>
+    <div class="bg-white p-8 rounded-3xl shadow text-center">
+      <p class="text-sm text-slate-500">Completion Rate</p>
+      <p class="text-4xl font-black text-emerald-600">+20%</p>
+    </div>
 
-   <div class="card">
-     <h3 class="font-bold text-lg mb-3">Drop-Off Before / After</h3>
-     <canvas id="beforeAfterChart"></canvas>
-   </div>
+    <div class="bg-white p-8 rounded-3xl shadow text-center">
+      <p class="text-sm text-slate-500">Drop-Off Reduction</p>
+      <p class="text-4xl font-black text-sky-600">−18%</p>
+    </div>
 
- </div>
+    <div class="bg-white p-8 rounded-3xl shadow text-center">
+      <p class="text-sm text-slate-500">Avg. Onboarding Time</p>
+      <p class="text-4xl font-black text-indigo-600">−22%</p>
+    </div>
+
+    <div class="bg-white p-8 rounded-3xl shadow text-center">
+      <p class="text-sm text-slate-500">Compliance Errors</p>
+      <p class="text-4xl font-black text-rose-600">−31%</p>
+    </div>
+
+  </div>
+
+</section>
+
+<!-- CORE -->
+<section class="max-w-7xl mx-auto px-6 mb-40">
+
+  <div class="grid lg:grid-cols-3 gap-14">
+
+    <div class="bg-white p-10 rounded-3xl shadow">
+      <h2 class="text-2xl font-bold mb-4">1. Problem</h2>
+      <p class="text-slate-600">
+        Rapid growth in digital banking volumes created operational bottlenecks.
+        Identity verification triggered abandonment due to camera permission blockers
+        and unclear user guidance.
+      </p>
+    </div>
+
+    <div class="bg-white p-10 rounded-3xl shadow">
+      <h2 class="text-2xl font-bold mb-4">2. Analytical Approach</h2>
+      <ul class="list-disc list-inside text-slate-600 space-y-2">
+        <li>120k+ sessions analyzed using SQL funnel models.</li>
+        <li>Step-level conversion and latency quantified.</li>
+        <li>A/B testing executed across redesigned UX flows.</li>
+        <li>Permission handling simplified.</li>
+      </ul>
+    </div>
+
+    <div class="bg-white p-10 rounded-3xl shadow">
+      <h2 class="text-2xl font-bold mb-4">3. Data Sources</h2>
+      <ul class="space-y-2">
+        <li>
+          <a class="underline text-blue-600 hover:text-blue-700"
+             target="_blank"
+             href="https://www.kaggle.com/datasets">
+             Public Banking Funnel Dataset (Kaggle)
+          </a>
+        </li>
+        <li>
+          <a class="underline text-blue-600 hover:text-blue-700"
+             target="_blank"
+             href="https://developers.google.com/web">
+             Browser Permission APIs
+          </a>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+</section>
+
+<!-- CHARTS -->
+<section class="max-w-7xl mx-auto px-6 mb-40">
+
+  <div class="grid md:grid-cols-2 gap-12">
+
+    <div class="bg-white p-10 rounded-3xl shadow">
+      <h3 class="font-bold text-xl mb-4">Conversion Funnel</h3>
+      <canvas id="funnelChart"></canvas>
+    </div>
+
+    <div class="bg-white p-10 rounded-3xl shadow">
+      <h3 class="font-bold text-xl mb-4">Drop-Off Before vs After</h3>
+      <canvas id="beforeAfterChart"></canvas>
+    </div>
+
+  </div>
 
 </section>
 
 <!-- RESULTS -->
-<section class="max-w-7xl mx-auto px-6 mb-36">
+<section class="max-w-7xl mx-auto px-6 mb-40">
 
- <div class="card">
+  <div class="bg-white p-12 rounded-3xl shadow">
 
-   <h2 class="font-bold text-2xl mb-4">5. Results & Executive Takeaways</h2>
+    <h2 class="text-3xl font-bold mb-6">5. Results & Executive Summary</h2>
 
-   <ul class="list-disc list-inside text-slate-600 space-y-2">
-     <li>Camera-related abandonment eliminated for embedded browsers.</li>
-     <li>Onboarding completion restored to pre-growth levels.</li>
-     <li>Compliance escalations materially reduced.</li>
-     <li>Design patterns scaled across retail products.</li>
-   </ul>
+    <ul class="list-disc list-inside text-slate-600 space-y-3">
+      <li>Abandonment driven by camera restrictions was materially reduced.</li>
+      <li>Onboarding stabilized at scale.</li>
+      <li>Regulatory remediation volumes declined.</li>
+      <li>Design patterns institutionalized across digital channels.</li>
+    </ul>
 
- </div>
+  </div>
 
 </section>
 
 <script>
-new Chart(document.getElementById('convChart'),{
+new Chart(document.getElementById('funnelChart'),{
  type:'line',
  data:{
    labels:['Intro','ID Scan','Selfie','Submit'],
-   datasets:[{
-     data:[78,61,55,49],
-     tension:.35
-   }]
+   datasets:[{data:[78,61,55,49], tension:.35}]
  },
  options:{
   plugins:{legend:{display:false}},
@@ -187,9 +172,7 @@ new Chart(document.getElementById('beforeAfterChart'),{
  type:'bar',
  data:{
    labels:['Before','After'],
-   datasets:[{
-     data:[35,17]
-   }]
+   datasets:[{data:[35,17]}]
  },
  options:{
   plugins:{legend:{display:false}},
