--- a/cases/ux-banking.html
+++ b/cases/ux-banking.html
@@ -4,10 +4,19 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-<title>Mobile UX Case – Secure Onboarding</title>
+<title>Secure Mobile Onboarding – UX Case</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<style>
+.kpi-number{
+  font-size:2.5rem;
+  font-weight:900;
+  color:#10b981;
+}
+</style>
+
 </head>
 
 <body class="bg-slate-50 text-slate-900">
@@ -20,21 +29,38 @@
 </nav>
 
 <!-- HERO -->
-<header class="pt-40 max-w-7xl mx-auto px-6 mb-40">
+<header class="pt-40 max-w-7xl mx-auto px-6 mb-28 text-center">
 
   <h1 class="text-6xl font-black mb-6 leading-tight">
     Secure Mobile Onboarding – UX Optimization
   </h1>
 
-  <p class="text-xl text-slate-600 max-w-3xl">
-    Funnel diagnostics identified a major conversion drop during identity photo capture.
-    Permission handling and guidance screens were redesigned to stabilize onboarding performance.
+  <p class="text-xl text-slate-600 max-w-3xl mx-auto">
+    Funnel diagnostics revealed a systemic conversion drop during identity
+    photo capture. Permission handling and guidance screens were redesigned
+    to stabilize onboarding performance at scale.
   </p>
+
+  <!-- DATA SOURCES -->
+  <div class="mt-8 text-sm text-slate-500">
+    Data sources:
+    <a class="underline text-sky-600 hover:text-sky-700"
+       target="_blank"
+       href="https://www.kaggle.com/datasets">
+       Public Banking Funnel Dataset
+    </a>
+    ·
+    <a class="underline text-sky-600 hover:text-sky-700"
+       target="_blank"
+       href="https://developers.google.com/web">
+       Browser Permission APIs
+    </a>
+  </div>
 
   <div class="mt-10">
     <a href="https://secure-onboarding-flow--ozgunbatuhan.replit.app"
        target="_blank"
-       class="bg-emerald-600 text-white px-8 py-4 rounded-full font-bold hover:bg-emerald-700 transition">
+       class="bg-emerald-600 text-white px-10 py-4 rounded-full font-bold hover:bg-emerald-700 transition">
        Open Live App
     </a>
   </div>
@@ -42,28 +68,28 @@
 </header>
 
 <!-- KPI -->
-<section class="max-w-7xl mx-auto px-6 mb-40">
+<section class="max-w-7xl mx-auto px-6 mb-36">
 
   <div class="grid md:grid-cols-4 gap-8">
 
     <div class="bg-white p-8 rounded-3xl shadow text-center">
       <p class="text-sm text-slate-500">Completion Rate</p>
-      <p class="text-4xl font-black text-emerald-600">+20%</p>
+      <p class="kpi-number" data-target="20">0%</p>
     </div>
 
     <div class="bg-white p-8 rounded-3xl shadow text-center">
       <p class="text-sm text-slate-500">Drop-Off Reduction</p>
-      <p class="text-4xl font-black text-sky-600">−18%</p>
+      <p class="kpi-number" data-target="18">0%</p>
     </div>
 
     <div class="bg-white p-8 rounded-3xl shadow text-center">
-      <p class="text-sm text-slate-500">Avg. Onboarding Time</p>
-      <p class="text-4xl font-black text-indigo-600">−22%</p>
+      <p class="text-sm text-slate-500">Avg. Onboarding Time ↓</p>
+      <p class="kpi-number" data-target="22">0%</p>
     </div>
 
     <div class="bg-white p-8 rounded-3xl shadow text-center">
-      <p class="text-sm text-slate-500">Compliance Errors</p>
-      <p class="text-4xl font-black text-rose-600">−31%</p>
+      <p class="text-sm text-slate-500">Compliance Errors ↓</p>
+      <p class="kpi-number" data-target="31">0%</p>
     </div>
 
   </div>
@@ -71,7 +97,7 @@
 </section>
 
 <!-- CORE -->
-<section class="max-w-7xl mx-auto px-6 mb-40">
+<section class="max-w-7xl mx-auto px-6 mb-36">
 
   <div class="grid lg:grid-cols-3 gap-14">
 
@@ -79,8 +105,8 @@
       <h2 class="text-2xl font-bold mb-4">1. Problem</h2>
       <p class="text-slate-600">
         Rapid growth in digital banking volumes created operational bottlenecks.
-        Identity verification triggered abandonment due to camera permission blockers
-        and unclear user guidance.
+        Identity verification triggered abandonment due to blocked camera
+        permissions and unclear in-app guidance.
       </p>
     </div>
 
@@ -90,27 +116,17 @@
         <li>120k+ sessions analyzed using SQL funnel models.</li>
         <li>Step-level conversion and latency quantified.</li>
         <li>A/B testing executed across redesigned UX flows.</li>
-        <li>Permission handling simplified.</li>
+        <li>Permission-handling logic simplified.</li>
       </ul>
     </div>
 
     <div class="bg-white p-10 rounded-3xl shadow">
-      <h2 class="text-2xl font-bold mb-4">3. Data Sources</h2>
-      <ul class="space-y-2">
-        <li>
-          <a class="underline text-blue-600 hover:text-blue-700"
-             target="_blank"
-             href="https://www.kaggle.com/datasets">
-             Public Banking Funnel Dataset (Kaggle)
-          </a>
-        </li>
-        <li>
-          <a class="underline text-blue-600 hover:text-blue-700"
-             target="_blank"
-             href="https://developers.google.com/web">
-             Browser Permission APIs
-          </a>
-        </li>
+      <h2 class="text-2xl font-bold mb-4">3. Implementation</h2>
+      <ul class="list-disc list-inside text-slate-600 space-y-2">
+        <li>Progressive disclosure of camera permissions.</li>
+        <li>Fallback upload paths for restricted browsers.</li>
+        <li>Inline validation and instructional overlays.</li>
+        <li>Real-time funnel dashboards in Power BI.</li>
       </ul>
     </div>
 
@@ -119,7 +135,7 @@
 </section>
 
 <!-- CHARTS -->
-<section class="max-w-7xl mx-auto px-6 mb-40">
+<section class="max-w-7xl mx-auto px-6 mb-36">
 
   <div class="grid md:grid-cols-2 gap-12">
 
@@ -145,10 +161,10 @@
     <h2 class="text-3xl font-bold mb-6">5. Results & Executive Summary</h2>
 
     <ul class="list-disc list-inside text-slate-600 space-y-3">
-      <li>Abandonment driven by camera restrictions was materially reduced.</li>
+      <li>Camera-related abandonment materially reduced.</li>
       <li>Onboarding stabilized at scale.</li>
-      <li>Regulatory remediation volumes declined.</li>
-      <li>Design patterns institutionalized across digital channels.</li>
+      <li>Compliance escalations declined.</li>
+      <li>Design patterns institutionalized across digital products.</li>
     </ul>
 
   </div>
@@ -156,11 +172,36 @@
 </section>
 
 <script>
+
+/* KPI ANIMATION */
+document.querySelectorAll('.kpi-number').forEach(el=>{
+  const target=+el.dataset.target;
+  let val=0;
+  const step=Math.ceil(target/40);
+
+  const tick=setInterval(()=>{
+    val+=step;
+    if(val>=target){
+      val=target;
+      clearInterval(tick);
+    }
+    el.textContent=val+'%';
+  },35);
+});
+
+/* BRAND BLUE */
+const brandBlue='rgb(14,165,233)';
+
 new Chart(document.getElementById('funnelChart'),{
  type:'line',
  data:{
    labels:['Intro','ID Scan','Selfie','Submit'],
-   datasets:[{data:[78,61,55,49], tension:.35}]
+   datasets:[{
+     data:[78,61,55,49],
+     borderColor:brandBlue,
+     tension:.35,
+     fill:false
+   }]
  },
  options:{
   plugins:{legend:{display:false}},
@@ -172,13 +213,17 @@ new Chart(document.getElementById('beforeAfterChart'),{
  type:'bar',
  data:{
    labels:['Before','After'],
-   datasets:[{data:[35,17]}]
+   datasets:[{
+     data:[35,17],
+     backgroundColor:brandBlue
+   }]
  },
  options:{
   plugins:{legend:{display:false}},
   scales:{y:{max:50,ticks:{callback:v=>v+'%'}}}
  }
 });
+
 </script>
 
 </body>
